compiler/testData/cli/jvm/_werror/werrorWithNoWarn.out
error: warnings found and -Werror specified
compiler/testData/cli/jvm/_werror/werror.kt:2:13: warning: division by zero.
    println(a / 0)
            ^^^^^
compiler/testData/cli/jvm/_werror/werror.kt:3:13: warning: division by zero.
    println(b / 0)
            ^^^^^
COMPILATION_ERROR
